<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    		   xmlns:tools="http://schemas.android.com/tools"
    		   android:orientation="vertical"
  	           android:layout_width="match_parent"
       		   android:layout_height="match_parent">

       		   
		    <TextView android:id="@+id/point_title"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:gravity="center"
			        android:padding="3dp"
			        android:textSize="36sp"
					android:textStyle="bold"/>
    
	       <Button android:id="@+id/forecastButton"
   	           	   android:text="@string/forecast"
   	           	   android:layout_margin="2dp"
   	           	   android:textColor="@android:color/white"
   	           	   android:background="@drawable/button_shape"
   	               android:layout_width="fill_parent"
        		   android:layout_height="wrap_content"/>
	       
	       <include layout="@layout/forecast_info" />
	       	       	      
	       <Button android:id="@+id/extendedForecastButton"
   	           	   android:text="@string/extended_forecast"
   	           	   android:layout_margin="2dp"
   	           	   android:background="@drawable/button_shape"
   	           	   android:textColor="@android:color/white"
   	               android:layout_width="fill_parent"
        		   android:layout_height="wrap_content"/>
   	       	<ListView
			        android:id="@+id/listforecast"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:visibility="gone" >
		    </ListView>

  		   <Button android:id="@+id/chartsButton"
  		       	   android:text="@string/charts"
   	           	   android:layout_margin="2dp"
   	           	   android:textColor="@android:color/white"
   	           	   android:background="@drawable/button_shape"
   	               android:layout_width="fill_parent"
        		   android:layout_height="wrap_content"/>
   	       	<ListView
			        android:id="@+id/listimages"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:visibility="gone" >
    	   </ListView>


 </LinearLayout>